<resources>
    <string name="app_name">Kirana Vendor</string>
    <string name="title_activity_maps">Map</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>



    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">SignIn</string>
    <string name="create_with_phone">SignUp</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Verification Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">User ID %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="phone">Phone Number</string>
    <string name="no_account">Dont Have An Account?</string>
    <string name="help">Help</string>
    <string name="has_acc">Already Have an  Account</string>
    <string name="phone_signup">SignUp</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="Save">save</string>
    <string name="acctype">Acoount Type</string>
    <string name="create_account">Create Account</string>
    <string name="phone_signin">Sign In</string>
    <string name="reportissue">Report An Issue</string>
    <string name="signout">SignOut</string>
    <string name="notifs">notifications</string>
    <string name="products">Products</string>
    <string name="purchases">Purchases</string>
    <string name="username">username</string>
    <string name="uid">User Id</string>
    <string name="status">Status</string>
    <string name="product">Product</string>
    <string name="delete">Delete</string>
    <string name="editprod">EditProduct</string>
    <string name="vendorname">vendor</string>
    <string name="time">time</string>
    <string name="_0">0</string>
    <string name="salescount">Sales</string>
    <string name="productname">ProductName</string>
    <string name="currency">$</string>
    <string name="productprice">Price</string>
    <string name="prodid">ProductId</string>
    <string name="phonenumber">Phone Number</string>
    <string name="decription">Description</string>
    <string name="price">Price</string>
    <string name="productid">Product ID</string>
    <string name="qty">Quantity</string>
    <string name="home">Home</string>
    <string name="skip">Skip</string>
    <string name="hello_formdata">We would like to get to know you more</string>
    <string name="friendlynote">Feel Free to skip,you can always fill in this form in your account profile later</string>
    <string name="description">Product Description,Lorem ipsum is blah blah blha..brrrrrr</string>
    <string name="qtycount">0</string>
    <string name="stock">Stock</string>
    <string name="accounttype">Account Type</string>
    <string name="app_launcher_icon">app_launcher_icon</string>
    <string name="home_header">Home Header</string>
    <string name="randtext">f4sd56#sfv</string>
    <string name="conform_purchase">Conform Purchase</string>
    <string name="confirm_purchase">CONFIRM PURCHASE</string>
    <string name="cancel">Cancel</string>
    <string name="checout">CheckOut</string>
    <string name="buy">Buy</string>
    <string name="profile">Profile</string>
    <string name="dataform">Data</string>

</resources>
