<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".auth.Auth">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_launcher_icon" />


    <LinearLayout
        android:id="@+id/infoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>

    <!--DataForm**************************************-->
    <include layout="@layout/activity_dataform" />

    <!--[START]AuthView**************************************-->
    <RelativeLayout
        android:id="@+id/signUpView"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="12dp"
        android:gravity="center_vertical"
        android:visibility="visible">


        <ProgressBar

            android:id="@+id/mprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>



        <LinearLayout
            android:id="@+id/phoneAuthFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/black">
        </com.google.android.material.textfield.TextInputEditText>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldVerificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_verification_code"
                    android:inputType="text"
                    android:textColor="@color/black" >
                </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/authButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneAuthFields"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verificationBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/phone_signin"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonVerifyPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/verify_phone_auth"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnResend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/resend_phone_auth"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

    <include layout="@layout/auth_help_view">

    </include>


    <!--[END]Non Functional decorations for now********************************-->

    <!--[END]AuthView**************************************-->
    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone">

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/sign_out" />

    </LinearLayout>




</LinearLayout>