<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newpost_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/getDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cr_product_id"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="horizontal"
            android:text="@string/productid">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cr_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cr_product_id"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/productname"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLines="1">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cr_prod_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cr_product_name"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/decription"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:scrollbars="horizontal">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cr_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cr_prod_description"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/price"
            android:inputType="number"
            android:scrollbars="horizontal">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cr_prod_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cr_product_price"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/qty"
            android:inputType="number"
            android:scrollbars="horizontal">

        </com.google.android.material.textfield.TextInputEditText>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSubmitProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_done_black_24dp" />


</RelativeLayout>